# esp32-c6

./: Cargo.toml
src/: main.rs
